kubernetes/charles_ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: charles-ratelimit-site
  namespace: default
spec:
  rateLimit:
    average: 50
    period: 1s
    burst: 100
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: charles-ratelimit-api
  namespace: default
spec:
  rateLimit:
    average: 10
    period: 1s
    burst: 20
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: charles-web
  namespace: default
spec:
  entryPoints:
    - websecure
  tls:
    secretName: charlesragone-com-tls
  routes:
    - match: Host(`charlesragone.com`) && PathPrefix(`/api`)
      kind: Rule
      priority: 20
      middlewares:
        - name: charles-ratelimit-api
      services:
        - name: prod-charles-services-service
          port: 80
    - match: Host(`charlesragone.com`)
      kind: Rule
      priority: 10
      middlewares:
        - name: charles-ratelimit-site
      services:
        - name: prod-charles-services-service
          port: 80
    - match: Host(`www.charlesragone.com`) && PathPrefix(`/api`)
      kind: Rule
      priority: 20
      middlewares:
        - name: charles-ratelimit-api
      services:
        - name: prod-charles-services-service
          port: 80
    - match: Host(`www.charlesragone.com`)
      kind: Rule
      priority: 10
      middlewares:
        - name: charles-ratelimit-site
      services:
        - name: prod-charles-services-service
          port: 80
    - match: Host(`yates.charlesragone.com`) && PathPrefix(`/api`)
      kind: Rule
      priority: 20
      middlewares:
        - name: charles-ratelimit-api
      services:
        - name: prod-charles-services-service
          port: 80
    - match: Host(`yates.charlesragone.com`)
      kind: Rule
      priority: 10
      middlewares:
        - name: charles-ratelimit-site
      services:
        - name: prod-charles-services-service
          port: 80
